--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -2,30 +2,30 @@
   <div class="footer-container">
     <div class="footer-content">
       <div class="footer-section">
-        <h3 class="footer-title">Academia</h3>
-        <p class="footer-description">Modern student management system</p>
+        <h3 class="footer-title">Academia Main()</h3>
+        <p class="footer-description">{{ 'FOOTER.DESCRIPTION' | translate }}</p>
       </div>
       
       <div class="footer-section">
-        <h4 class="footer-heading">Quick Links</h4>
+        <h4 class="footer-heading">{{ 'FOOTER.QUICK_LINKS' | translate }}</h4>
         <ul class="footer-links">
-          <li><a routerLink="/students">Students</a></li>
-          <li><a routerLink="/groups">Groups</a></li>
-          <li><a routerLink="/attendance">Attendance</a></li>
-          <li><a routerLink="/billing">Billing</a></li>
+          <li><a routerLink="/students">{{ 'NAVBAR.STUDENTS' | translate }}</a></li>
+          <li><a routerLink="/groups">{{ 'NAVBAR.GROUPS' | translate }}</a></li>
+          <li><a routerLink="/attendance">{{ 'NAVBAR.ATTENDANCE' | translate }}</a></li>
+          <li><a routerLink="/billing">{{ 'NAVBAR.BILLING' | translate }}</a></li>
         </ul>
       </div>
       
       <div class="footer-section">
-        <h4 class="footer-heading">Support</h4>
+        <h4 class="footer-heading">{{ 'FOOTER.SUPPORT' | translate }}</h4>
         <ul class="footer-links">
-          <li><a routerLink="/forgot-password">Forgot Password</a></li>
+          <li><a routerLink="/forgot-password">{{ 'LOGIN.FORGOT_PASSWORD' | translate }}</a></li>
         </ul>
       </div>
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; 2025 Academia. All rights reserved.</p>
+      <p>&copy; 2025 Academia Main(). {{ 'FOOTER.ALL_RIGHTS_RESERVED' | translate }}</p>
     </div>
   </div>
 </footer>
