--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,8 @@
-<app-navbar *ngIf="showNavbarAndFooter"></app-navbar>
-  <router-outlet></router-outlet>
-<app-footer *ngIf="showNavbarAndFooter"></app-footer>
+@if (showNavbarAndFooter) {
+  <app-navbar></app-navbar>
+}
+<router-outlet></router-outlet>
+@if (showNavbarAndFooter) {
+  <app-footer></app-footer>
+}
+<app-notification></app-notification>
